@@ -1,4 +1,4 @@
 AM_CPPFLAGS = -I${top_srcdir}/src
 AM_LDFLAGS = -shared -module -avoid-version
 
-plugin_LTLIBRARIES = fade.la spin.la
+plugin_LTLIBRARIES = fade.la spin.la vfade.la
